[metadata]
name = wbstatus
summary = Generate a summary of Phabricator workboard activity for a given time period
description-file =
    README.md
author = Rob Lanphier
home-page = https://github.com/robla/phab-wbstatus

[nosetests]
detailed-errors=1
with-doctest=1
with-coverage=1
cover-package=wbstatus

[pep8]
ignore=E128
exclude=.tox,.venv,build,dist,docs,*.egg,*.egg-info

[flake8]
ignore=E128
count=1
show-pep8=1
show-source=1
statistics=1
exclude=.tox,.venv,build,dist,docs,*.egg,*.egg-info
